tests/ui/const-generics/issues/issue-71202.stderr
error: unconstrained generic constant
  --> $DIR/issue-71202.rs:11:5
   |
LL | /     const ITEM_IS_COPY: [(); 1 - {
LL | |         trait NotCopy {
LL | |             const VALUE: bool = false;
LL | |         }
...  |
LL | |         <IsCopy<T>>::VALUE
LL | |     } as usize] = [];
   | |_____________________^
   |
   = help: try adding a `where` bound using this expression: `where [(); 1 - {
                   trait NotCopy {
                       const VALUE: bool = false;
                   }
           
                   impl<__Type: ?Sized> NotCopy for __Type {}
           
                   struct IsCopy<__Type: ?Sized>(PhantomData<__Type>);
           
                   impl<__Type> IsCopy<__Type>
                   where
                       __Type: Sized + Copy,
                   {
                       const VALUE: bool = true;
                   }
           
                   <IsCopy<T>>::VALUE
               } as usize]:`

error: unconstrained generic constant
  --> $DIR/issue-71202.rs:28:19
   |
LL |     } as usize] = [];
   |                   ^^
   |
   = help: try adding a `where` bound using this expression: `where [(); 1 - {
                   trait NotCopy {
                       const VALUE: bool = false;
                   }
           
                   impl<__Type: ?Sized> NotCopy for __Type {}
           
                   struct IsCopy<__Type: ?Sized>(PhantomData<__Type>);
           
                   impl<__Type> IsCopy<__Type>
                   where
                       __Type: Sized + Copy,
                   {
                       const VALUE: bool = true;
                   }
           
                   <IsCopy<T>>::VALUE
               } as usize]:`

error: aborting due to 2 previous errors

